# automatos-unified-adapter

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  env.example  pyproject.toml
admin-ui/: README.md  app.js  index.html  styles.css
docs/: ARCHITECTURE.md  PRD-34-UNIFIED-INTEGRATIONS-ADAPTER.md  RESEARCH.md
scripts/: migrate_tools_from_seed.py
src/unified_adapter/: __init__.py  admin_api.py  auth.py  automatos_client.py  config.py  executors.py  logging.py  main.py  models.py  openapi.py  server.py  service.py  tool_registry.py  tool_store.py
